landing page CSS overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ section {
   flex-direction: column;
   flex-grow: 1;
   justify-content: center;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .card {
